# tower-lsp-web-demo

./: .gitignore  .prettierrc.yaml  Cargo.toml  Makefile.toml  README.md  app.bundle.js  index.html  package-lock.json  package.json  rustfmt.toml  tsconfig.json
.cargo/: config
app/: index.html  package-lock.json  package.json  tsconfig.json
app/src/: index.ts
crates/browser/: Cargo.toml
crates/browser/src/: lib.rs
crates/language/: Cargo.toml
crates/language/src/: language.rs  lib.rs  parser.rs
crates/server/: Cargo.toml
crates/server/src/: core.rs  handler.rs  lib.rs  server.rs
crates/server/src/core/: document.rs  error.rs  session.rs  syntax.rs  text.rs
server/: Cargo.toml
server/src/: lib.rs
