[package]
edition = "2021"
name = "server"
version = "0.1.0"

[features]
default = ["tower-lsp/runtime-agnostic"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
tower-lsp = { version = "0.17.0", default-features = false }
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
wasm-streams = "0.2.3"
web-sys = { version = "0.3.57", features = [ "console", "ReadableStream", "WritableStream" ] }

[dev-dependencies]
