[package]
publish = false
edition = "2021"
name = "demo-lsp-language"
version = "0.0.0"

[dependencies]
anyhow = "1.0"
futures = "0.3"
thiserror = "1.0"
js-sys = "0.3.57"
tree-sitter = { version = "0.9", package = "tree-sitter-facade" }
wasm-bindgen = { version = "=0.2.81", features = ["strict-macro"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3.57"
web-tree-sitter-sys = "1.3"
